Added menu items, twitter support, fixed some formatting

--- a/index.html
+++ b/index.html
@@ -4,33 +4,49 @@
     <meta charset="utf-8"/>
     <title>CIS 408 Project</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script type="text/javascript" src="script.js"></script>
+    <!--<script type="text/javascript" src="script.js"></script>-->
+	<!--Twitter script. Needs to be moved to js file-->
+	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
   </head>
 
   <body onload="">
     
 	<h1>Programming.Blog()</h1>
-
+	
 	<div class="blogs-section">
 
 	<div id="blog-1" class="blog">
 		<h2 class="blog-header">SQL stuff</h2>
 		<p class="blog-content">I learned some sql. sql is cool sql is cool sql is cool sql is cool sql is cool sql is cool sql is cool sql is cool sql is cool sql is cool sql is cool.</p>
-		<p class="author">Samuel Turnage</p>
+		<div class="author">Samuel Turnage</div>
+		<div class="date">May 1, 2016</div>
+		<a href="https://twitter.com/share" class="twitter-share-button" data-text="Hey! I saw a cool post on SQL stuff, check it out here!">Tweet</a>
+
 	</div>
 
 	<div id="blog-2" class="blog">
 		<h2 class="blog-header">SQL stuff</h2>
 		<p class="blog-content">I learned some sql. sql is cool sql is cool sql is cool sql is cool sql is cool sql is cool sql is cool sql is cool sql is cool sql is cool sql is cool.</p>
-		<p class="author">Samuel Turnage</p>
+		<div class="author">Samuel Turnage</div>
+		<div class="date">May 1, 2016</div>
+		<a href="https://twitter.com/share" class="twitter-share-button" data-text="Hey! I saw a cool post on SQL stuff, check it out here!">Tweet</a>
 	</div>
 
 	<div id="blog-3" class="blog">
 		<h2 class="blog-header">SQL stuff</h2>
 		<p class="blog-content">I learned some sql. sql is cool sql is cool sql is cool sql is cool sql is cool sql is cool sql is cool sql is cool sql is cool sql is cool sql is cool.</p>
-		<p class="author">Samuel Turnage</p>
+		<div class="author">Samuel Turnage</div>
+		<div class="date">May 1, 2016</div>
+		<a href="https://twitter.com/share" class="twitter-share-button" data-text="Hey! I saw a cool post on SQL stuff, check it out here!">Tweet</a>
 	</div>
 
+	</div>
+	
+	<div class="blogs-controls">
+		<a class="blog-control" href="#">Log in</a><br/>
+		<a class="blog-control" href="#">Log out</a><br/>
+		<a class="blog-control" href="post.html">Create post</a><br/>
+		<a class="blog-control" href="#">Delete post</a><br/>
 	</div>
 
   </body>
