--- a/post.html
+++ b/post.html
@@ -8,6 +8,7 @@
 		<script type="text/javascript" src="script.js"></script>
 	</head>
 	<body onload="">
+		<h1>Add a post()</h1>
 		<div class="blog">
 			<form  class= "pform" method="post" >
 				Title:
