--- a/post.html
+++ b/post.html
@@ -10,7 +10,7 @@
 	<body onload="">
 		<h1>Add a post()</h1>
 		<div class="blog">
-			<form  class= "pform" method="post" >
+			<form  class= "pform" method="post" action="blog.php">
 				Title:
 				<br>
 				<input type="text" name="title" pattern="[A-Za-z]*" required>
